dom/html/HTMLInputElement.h
@@ -748,8 +748,16 @@ class HTMLInputElement final : public nsGenericHTMLFormElementWithState,
   void GetDateTimeInputBoxValue(DateTimeValue& aValue);
 
   /*
+   * This locates the inner datetimebox UA Widget element and only the
+   * UA Widget
+   * element. This should fold into GetDateTimeBoxElement() when the XBL binding is removed.
+   */
+  Element* GetDateTimeBoxElementInUAWidget();
+
+  /*
    * This allows chrome JavaScript to dispatch event to the inner datetimebox
-   * anonymous element or access nsIDateTimeInputArea implmentation.
+   * anonymous or UA Widget element and access nsIDateTimeInputArea
+   * implementation.
    */
   Element* GetDateTimeBoxElement();
 
